Add reference corpus and external similarity
